[tool.poetry]
name = "lab-spellingbee-extended"
version = "0.1.0"
description = ""
authors = ["emma <eqbrown@isf.edu.hk>", "bgenzlinger@isf.edu.hk"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
inquirerpy = "^0.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
